infrastructure/aws/cloudformation/application.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "keyname": {
            "Type": "String"
        },
        "AmiId": {
            "Type": "String"
        },
        "NameTag": {
            "Type": "String"
        },
        "webappbucket": {
            "Type": "String"
        },
        "codedeploybucket":{
            "Type":"String"
        },
        "Accountno":{
          "Type":"String"
        },
        "fromaddress":{
          "Type":"String"
        }
    },
    "Resources": {
        "ec2instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Ref": "AmiId"
                },
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "keyname"
                },
                "SubnetId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-web-subnet"
                },
                "IamInstanceProfile": "CodeDeployEC2ServiceRoleProfile",
                "SecurityGroupIds": [
                    {
                        "Ref": "webappsecuritygroup"
                    }
                ],
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeSize": 20,
                            "DeleteOnTermination": "true",
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "NameTag"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe \n",
                                "sudo yum update -y \n",
                                "sudo yum install java-1.8.0-openjdk -y \n",
                                "sudo yum install java-1.8.0-openjdk-devel -y \n",
                                "sudo yum install ruby -y \n",
                                "sudo yum install wget -y \n",
                                "cd /home/centos \n",
                                "wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install \n",
                                "chmod +x ./install \n",
                                "sudo ./install auto \n",
                                "sudo service codedeploy-agent start \n",
                                "sudo echo DBCreationType=update >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export DBCreationType >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo username=csye6225master >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export username >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo password=csye6225password >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export password >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo profiletype=dev >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export profiletype >> /etc/profile.d/envvariable.sh \n",
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "echo awsRDS=jdbc:mysql://",
                                            {
                                                "Fn::GetAtt": [
                                                    "rdsinstance",
                                                    "Endpoint.Address"
                                                ]
                                            },
                                            ":3306/csye6225 >> /etc/profile.d/envvariable.sh \n"
                                        ]
                                    ]
                                },
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "echo ARN=arn:aws:sns:us-east-1:",
                                            {
                                                "Ref": "Accountno"

                                            },
                                            ":password_reset >> /etc/profile.d/envvariable.sh \n"
                                        ]
                                    ]
                                },
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "sudo echo bucketName=",
                                            {
                                                "Ref": "webappbucket"
                                            },
                                            ">> /etc/profile.d/envvariable.sh \n"
                                        ]
                                    ]
                                },
                                "sudo echo export awsRDS >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export bucketName >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo endpointUrl=https://s3.us-east-1.amazonaws.com/ >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export endpointUrl >> /etc/profile.d/envvariable.sh \n",
                                "source /etc/profile.d/envvariable.sh \n",
                                "mkdir /home/centos/webapp \n",
                                "sudo chown centos:centos -R /home/centos/webapp \n",
                                "iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j DNAT --to-destination :8080"
                            ]
                        ]
                    }
                }
            }
        },
        "dbsubnetgroup": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Subnet description of db subnets",
                "SubnetIds": [
                    {
                        "Fn::ImportValue": "csye6225-cloud-Networking-db-subnet1Id"
                    },
                    {
                        "Fn::ImportValue": "csye6225-cloud-Networking-db-subnet2Id"
                    }
                ]
            }
        },
        "webappsecuritygroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-VPC-Id"
                },
                "GroupDescription": "Security group for web server",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 8080,
                        "ToPort": 8080,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "dbsecuritygroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-VPC-Id"
                },
                "GroupDescription": "Ec2 security group for DB",
                "SecurityGroupIngress": [
                    {
                        "SourceSecurityGroupId": {
                            "Ref": "webappsecuritygroup"
                        },
                        "FromPort": 3306,
                        "IpProtocol": "tcp",
                        "ToPort": 3306
                    }
                ]
            }
        },
        "tabel1": {
            "Type": "AWS::DynamoDB::Table",
            "Properties": {
                "AttributeDefinitions": [
                    {
                        "AttributeName": "id",
                        "AttributeType": "S"
                    }
                ],
                "KeySchema": [
                    {
                        "AttributeName": "id",
                        "KeyType": "HASH"
                    }
                ],
                "ProvisionedThroughput": {
                    "ReadCapacityUnits": 10,
                    "WriteCapacityUnits": 5
                },
                "TimeToLiveSpecification": {
                "AttributeName": "TTL",
                "Enabled": "TRUE"
                },
                "TableName": "csye6225"
            }
        },
        "rdsinstance": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "DBInstanceClass": "db.t2.medium",
                "AllocatedStorage": "20",
                "Engine": "MySQL",
                "MultiAZ": "false",
                "DBInstanceIdentifier": "csye6225-Spring2019",
                "MasterUsername": "csye6225master",
                "MasterUserPassword": "csye6225password",
                "DBSubnetGroupName": {
                    "Ref": "dbsubnetgroup"
                },
                "PubliclyAccessible": true,
                "DBName": "csye6225",
                "Port": "3306",
                "VPCSecurityGroups": [
                    {
                        "Ref": "dbsecuritygroup"
                    }
                ],
                "StorageType": "gp2"
            }
        },
        "SNS":{
            "Type":"AWS::SNS::Topic",
            "Properties":{
                "TopicName": "password_reset",
                "Subscription":[{
                    "Endpoint" : { "Fn::GetAtt" : [ "lambdafunction", "Arn" ] },
                    "Protocol" : "lambda"
                }]
            }
        },
        "lambdafunction":{
            "Type":"AWS::Lambda::Function",
            "Properties":{
                "FunctionName":"SendEmailOnSNS",
                "Environment":{
                    "Variables" : { "fromaddr": {"Ref":"fromaddress"}}
                  },
                "Code":{
                    "S3Bucket":{"Ref":"codedeploybucket"},
                    "S3Key":"Lambda-0.0.1-SNAPSHOT.jar"
                },
                "Role": "arn:aws:iam::392230586247:role/service-role/lambdarole",
                "Timeout": 90,
                "Handler": "csye6225.lambda.LogEvent::handleRequest",
                "Runtime":"java8"
            }
        }
    }
}
